# arm64_OpenGLTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  glad.c  main.cpp
include/glad/: glad.h
